--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<header> Main Page</header>
+<title> Main Page</title>
+<head rel="stylesheet" href= style.css></head>
 <main>
     <body>
         <h1>Testing 123</h1>
