--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <title> Main Page</title>
-<head rel="stylesheet" href= style.css></head>
+<head>
+    <link rel="stylesheet" type="text/css" href= style.css>
+</head>
+
 <main>
     <body>
         <h1>Testing 123</h1>
