--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Wan Lynn</title>
+        <link rel="icon" href="https://img.icons8.com/plasticine/100/000000/reading-unicorn.png">
         <meta name="description" content="Wan Lynn's portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -40,6 +41,16 @@
                                 <span>Introduction</span>
                             </a>
                           </li>
+                          <li id="edubtn_li">
+                            <a id="edubtn">
+                                <span>Education</span>
+                            </a>
+                          </li>
+                          <li id="careerbtn_li">
+                            <a id="careerbtn">
+                                <span>Career</span>
+                            </a>
+                          </li>
                           <li id="projectbtn_li">
                             <a id="projectbtn">
                                 <span>Project</span>
@@ -48,11 +59,6 @@
                           <li id="employbtn_li">
                             <a id="employbtn">
                                 <span>Employment Status</span>
-                            </a>
-                          </li>
-                          <li id="contactbtn_li">
-                            <a id="contactbtn">
-                                <span>Contacts</span>
                             </a>
                           </li>
                         </ul>
@@ -103,25 +109,161 @@
             </div>
         </div>
 
-        <!-- Projects -->
-        <div id="projects">
+        <!-- Education -->
+        <div id="edu" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+            <div class="has-background-white">
+                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
+                    <div>
+                        <div name="education">
+                            <h3 class="title is-2 has-text-centered">EDUCATION</h3>
+                            <!-- UMS (Degree) -->
+                            <div class="box">
+                                <article class="media">
+                                    <div class="media-left">
+                                        <figure class="image is-128x128" name="logo/brand/icon">
+                                            <img src="./pics/ums.jpg" alt="UMS logo">
+                                        </figure>
+                                    </div>
+                                    <div class="media content">
+                                        <div class="container content is-size-6 is-justify-content-center paragraph">
+                                            <h5>Bachelor Of Computer Science with Honours (Software Engineering)</h5>
+                                            <strong>Universiti Malaysia Sabah (UMS)</strong>
+                                            <br>2018-2022
+                                            <br>Currently CGPA 3.6
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                            <!-- UMS (Foundation) -->
+                            <div class="box">
+                                <article class="media">
+                                    <div class="media-left">
+                                        <figure class="image is-128x128" name="logo/brand/icon">
+                                            <img src="./pics/ums.jpg" alt="UMS logo">
+                                        </figure>
+                                    </div>
+                                    <div class="media content">
+                                        <div class="container content is-size-6 is-justify-content-center paragraph">
+                                            <h5>Foundation in Science and Technology</h5>
+                                            <strong>Universiti Malaysia Sabah (UMS)</strong>
+                                            <br>2017-2018
+                                            <br>CGPA 3.4
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                            <!-- SAMURA -->
+                            <div class="box">
+                                <article class="media">
+                                    <div class="media-left">
+                                        <figure class="image is-128x128" name="logo/brand/icon">
+                                            <img src="./pics/LOGO SEKOLAH MUAR.jpg" alt="SAMURA logo">
+                                        </figure>
+                                    </div>
+                                    <div class="media content">
+                                        <div class="container content is-size-6 is-justify-content-center paragraph">
+                                            <h5>Pure Sciences</h5>
+                                            <strong>SM Sains Muar (SAMURA)</strong>
+                                           <br>SPM: 8A 1C
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project -->
+        <div id="edu" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+            <div class="has-background-white">
+                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content paragraph">
+                    <div>
+                        <h3 class="title is-2 has-text-centered">PROJECT</h3>
+                        <div class="is-flex is-flex-direction-row">
+                            <!-- Borneo Homestay -->
+                            <div class="box">
+                                <article class="media">
+                                    <div class="media-left">
+                                        <!-- Image of project -->
+                                        <figure>
+
+                                        </figure>
+                                    </div>
+                                    <div class="media content">
+                                        <div class="content">
+
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                            <!-- Issue System -->
+                            <div class="box">
+                                <article class="media">
+                                    <div class="media-left">
+                                        <!-- Image of project -->
+                                        <figure>
+
+                                        </figure>
+                                    </div>
+                                    <div class="media content">
+                                        <div class="content">
+
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Career -->
+        <div id="career" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+            <div class="has-background-white">
+                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content paragraph">
+                    <div>
+                        <h3 class="title is-3 has-text-centered">CAREER</h3>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Employment status -->
-        <div id="employment">
-
+        <div id="employment" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+            <div class="has-background-white">
+                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content paragraph>
+                    <div>
+                        <h3 class="title is-3 has-text-centered">EMPLOYMENT STATUS</h3>
+                        <div>
+                            Accomodation: No vehicle nor driving license as of now
+                            <br>Willing to learm a set of moves
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <!-- Contact -->
-        <div id="contact">
-
-        </div>
     </body>
-    <footer class="footer">
+    <footer class="footer is-flex is-justify-content-center">
         <div class="content has-text-centered">
             <p>
-                <strong>Jimie's portfolio</strong>
+                <strong>Lynn's portfolio</strong> by Wan Norazlin.</a><br>If you would like to contact me,
+                you can send an email to wwannorazlin@gmail.com or reach out to me thorugh my social media handles:
+                <div class="has-text-centered is-flex is-flex-content-center">
+                    <a href="#">
+                        <figure class="image is-32x32">
+                            <img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png"/>  
+                        </figure>
+                    </a>
+                    
+                </div>
             </p>
         </div>
     </footer>
