--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
-                                            <img src="./pics/ums.jpg" alt="UMS logo">
+                                            <img src="pics/ums.jpg" alt="UMS logo">
                                         </figure>
                                     </div>
                                     <div class="media content">
@@ -139,7 +139,7 @@
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
-                                            <img src="./pics/ums.jpg" alt="UMS logo">
+                                            <img src="pics/ums.jpg" alt="UMS logo">
                                         </figure>
                                     </div>
                                     <div class="media content">
@@ -157,7 +157,7 @@
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-128x128" name="logo/brand/icon">
-                                            <img src="./pics/LOGO SEKOLAH MUAR.jpg" alt="SAMURA logo">
+                                            <img src="pics/LOGO SEKOLAH MUAR.jpg" alt="SAMURA logo">
                                         </figure>
                                     </div>
                                     <div class="media content">
