--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
                         <div>
                             <figure class="is-flex image is-128x128">
-                                <img class="is-rounded" src="./picture/akshar-dave-1GRvY9WUu08-unsplash.jpg" alt="">  
+                                <img class="is-rounded" src="pics/akshar-dave-1GRvY9WUu08-unsplash.jpg" alt="">  
                             </figure>
                         </div>
                         <p class="is-size-6 paragraph">
