--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                 <div class="m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <h3 class="title is-3 has-text-centered">CAREER</h3>
-                        <div>
-                            <div class="box is-flex is-justify-content-center is-align-content-center">
+                        <div class="m-auto column is-half">
+                            <div class="box">
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="mt-2 image is-128x128" name="logo/brand/icon">
@@ -375,6 +375,7 @@
                                     </div>
                                 </article>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
