--- a/index.html
+++ b/index.html
@@ -184,16 +184,36 @@
                         <h3 class="title is-3 has-text-centered">PROJECTS</h3>
                         <!-- Intern project -->
                         <div class="is-flex is-flex-direction-column">
-                            <h4>Internship Projects</h4>
+                            <h4 class="mt-5 title is-4 has-text-centered">Internship Projects</h4>
                             <div class="m-auto column is-half">
                                 <div class="box">
+                                    <h5 class="title is-5 has-text-centered">Poop poop</h5>
+                                    <article>
+                                        <div class="media-left">
+                                            <!-- Image of project -->
+                                            <figure class="image is-128x128 has-background-dark is-flex is-align-items-center">
+                                                <img src="" alt="">
+                                            </figure>
+                                        </div>
+                                        <div class="media">
+                                            <div>
+                                                <article class="is-size-6">
 
+                                                </article>
+                                                <!-- Tags showing the techs/language used -->
+                                                <div class="mt-3 mb-4">
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </article>
                                 </div>
                             </div>
                         </div>
+                        <hr>
                         <!-- University Project -->
                         <div class="is-flex is-flex-direction-column">
-                            <h4 class="title is-4 has-text-centered">University Projects</h4>
+                            <h4 class="mt-5 title is-4 has-text-centered">University Projects</h4>
                             <div class="m-auto column is-half">
                                 <!-- FYP Project -->
                                 <div class="box">
