--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Personal script -->
         <script src="./script/index.js"></script>
     </head>
-    <body>
+    <body class="is-mobile">
 
         <!-- Navbar -->
         <div>
@@ -34,8 +34,8 @@
                     <div>
                         <h4 class="welcome">Welcome!</h4>
                     </div>
-                    <div class="tabs">
-                        <ul>
+                    <div class="navbar-brand">
+                        <ul class="tabs">
                           <li id="introbtn_li" class="is-active">
                             <a id="introbtn" class="is-danger">
                                 <span>Introduction</span>
@@ -62,14 +62,22 @@
                             </a>
                           </li>
                         </ul>
+
+                        <!-- Navbar mobile -->
+                        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                        </a>
                     </div>
                     
                 </div>
             </nav>
         </div>
+
         
         <!-- Introduction -->
-        <div id="introduction" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer">
+        <div id="introduction" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer">
             <div class="has-background-white">
                 <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <!-- Cute picture of me -->
@@ -110,7 +118,7 @@
         </div>
 
         <!-- Education -->
-        <div id="edu" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="edu" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="has-background-white">
                 <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <div>
@@ -177,7 +185,7 @@
         </div>
 
         <!-- Project -->
-        <div id="projects" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="projects" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="has-background-white">
                 <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
@@ -361,7 +369,7 @@
         </div>
 
         <!-- Career -->
-        <div id="career" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="career" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="has-background-white">
                 <div class="m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
@@ -403,7 +411,7 @@
         </div>
 
         <!-- Employment status -->
-        <div id="employment" name="outer" class="container is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="employment" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="has-background-white">
                 <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
