--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body class="is-mobile">
 
         <!-- Navbar -->
-        <div>
+        <div class="is-mobile is-fluid">
             <nav class="navbar" role="navigation" aria-label="main navigation">   
                 <div class="mt-3 mb-5 is-flex is-flex-direction-column has-text-centered navlinks">
                     <div>
@@ -62,15 +62,7 @@
                             </a>
                           </li>
                         </ul>
-
-                        <!-- Navbar mobile -->
-                        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-                            <span aria-hidden="true"></span>
-                            <span aria-hidden="true"></span>
-                            <span aria-hidden="true"></span>
-                        </a>
                     </div>
-                    
                 </div>
             </nav>
         </div>
@@ -78,8 +70,8 @@
         
         <!-- Introduction -->
         <div id="introduction" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer">
-            <div class="has-background-white">
-                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
+            <div class="is-fluid is-mobile has-background-white">
+                <div class="m-auto is-mobile is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <!-- Cute picture of me -->
                     <div name="picture" class="is-flex is-flex-direction-row is-align-items-center is-align-content-center  mt-5 mb-5">
                         <div>
@@ -119,8 +111,8 @@
 
         <!-- Education -->
         <div id="edu" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
-            <div class="has-background-white">
-                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
+            <div class="is-fluid is-mobile has-background-white">
+                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <div>
                         <div name="education">
                             <h3 class="title is-2 has-text-centered">EDUCATION</h3>
@@ -186,8 +178,8 @@
 
         <!-- Project -->
         <div id="projects" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
-            <div class="has-background-white">
-                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
+            <div class="is-fluid is-mobile has-background-white">
+                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <h3 class="title is-3 has-text-centered">PROJECTS</h3>
                         <!-- Intern project -->
@@ -370,8 +362,8 @@
 
         <!-- Career -->
         <div id="career" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
-            <div class="has-background-white">
-                <div class="m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
+            <div class="is-fluid is-mobile has-background-white">
+                <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <h3 class="title is-3 has-text-centered">CAREER</h3>
                         <div class="m-auto column is-half">
@@ -412,8 +404,8 @@
 
         <!-- Employment status -->
         <div id="employment" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
-            <div class="has-background-white">
-                <div class="m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
+            <div class="is-fluid is-mobile has-background-white">
+                <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <h4 class="title is-3 has-text-centered">EMPLOYMENT STATUS</h4>
                         <div class="is-flex is-flex-direction-row is-justify-content-space-evenly">
