--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </head>
     <body class="is-mobile">
 
-        <!-- Navbar -->
+        <!-- Navbar Desktop -->
         <div class="is-mobile is-fluid">
             <nav class="navbar" role="navigation" aria-label="main navigation">   
                 <div class="mt-3 mb-5 is-flex is-flex-direction-column has-text-centered navlinks">
                     <div>
                         <h4 class="welcome">Welcome!</h4>
                     </div>
-                    <div class="navbar-brand">
+                    <div class="navbar-brand scrollmenu">
                         <ul class="tabs">
                           <li id="introbtn_li" class="is-active">
                             <a id="introbtn" class="is-danger">
@@ -66,10 +66,9 @@
                 </div>
             </nav>
         </div>
-
         
         <!-- Introduction -->
-        <div id="introduction" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer">
+        <div id="introduction" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer">
             <div class="is-fluid is-mobile has-background-white">
                 <div class="m-auto is-mobile is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <!-- Cute picture of me -->
@@ -110,7 +109,7 @@
         </div>
 
         <!-- Education -->
-        <div id="edu" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="edu" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 content">
                     <div>
@@ -177,7 +176,7 @@
         </div>
 
         <!-- Project -->
-        <div id="projects" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="projects" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
@@ -361,7 +360,7 @@
         </div>
 
         <!-- Career -->
-        <div id="career" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="career" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
@@ -403,7 +402,7 @@
         </div>
 
         <!-- Employment status -->
-        <div id="employment" name="outer" class="container is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
+        <div id="employment" name="outer" class="is-mobile is-fluid p-5 mt-4 mb-4 outer" hidden>
             <div class="is-fluid is-mobile has-background-white">
                 <div class="is-fluid is-mobile m-auto is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
